<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FiftyFifty</string>
    <string name="action_settings">Settings</string>
    <string name="tv_facebook_login">Login With Facebook</string>
    <string name="tv_facebook_login_details">Play with friends, continue current games, and share your victories. We will never post on your wall without asking.</string>
    <string name="tv_email_login">Login With Email</string>
    <string name="tv_email_login_details">Sign up or login using your email address or username</string>
    <string name="btn_email_login">Login With Email or Username</string>
    <string name="title_activity_initial_login_menu">InitialLoginMenuActivity</string>
    <string name="title_activity_main_menu">Main_menu</string>
    <string name="hello_world">Hello world!</string>
    <string name="honest_button">Answer Question Honestly</string>
    <string name="guess_popular">Guess Popular Question</string>
    <string name="submit_question">Submit Question</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="my_profile">My profile</string>
    <string name="one_vs_one">1 vs 1</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="tv_new_player">New Player?</string>
    <string name="tv_signup_details">Sign up to play 50/50. Don \'t worry, we won\'t share your email address with anyone.</string>
    <string name="tv_login_already_details">Already have an account?</string>
    <string name="tv_facebook_username_headline">"Choose a Username"</string>
    <string name="tv_facebook_username_details">Please create a new username.</string>
    <string name="title_activity_submit_question">SubmitQuestionActivity</string>
    <string name="activity_submit_question_explanation">Submit your question by writing it in the question-field and then provide two answer alternatives below. Then click "Submit Question".</string>
    <string name="activity_submit_question_hint_submit">Write your question here!</string>
    <string name="activity_submit_question_hint_alternative_1">Alternative 1 here!</string>
    <string name="activity_submit_question_hint_alternative_2">Alternative 2 here!</string>
    <string name="activity_suvmit_question_button_submit">Submit Question</string>
    <string name="activity_suvmit_question_button_cancel">Cancel</string>
    <string name="activity_honest_question_next_button">Next</string>
    <string name="title_activity_email_create_account">EmailCreateAccountActivity</string>
    <string name="title_activity_facebook_username">FacebookUsernameActivity</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tv_login_details">Enter your username or email address.</string>
    <string name="tv_forgot_password_details">Don\'t remember your password?</string>
    <string name="btn_email_reminder">Send Email Reminder</string>
    <string name="email_or_username">Email or username</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_honest_question">Honest Question Activity</string>
    <string name="title_activity_leaderboards">LeaderboardsActivity</string>
    <string name="title_activity_one_vs_one">OneVsOneActivity</string>
    <string name="title_activity_popular_opinion">PopularOpinionActivity</string>

</resources>