<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InitialLoginMenuActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_facebook_login"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_facebook_login_details"
        android:textStyle="italic" />

    <Button
        android:id="@+id/facebook_login_button"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dip"
        android:text="@string/tv_facebook_login"
        android:textSize="12sp"
        android:textStyle="normal" 
        android:onClick="toFuckingSomething"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email_login"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_email_login_details"
        android:textStyle="italic" />

    <Button
        android:id="@+id/email_login_button"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dip"
        android:text="@string/btn_email_login"
        android:textSize="12sp"
        android:textStyle="normal" 
        android:onClick="toEmailCreateAccountActivity"/>

</LinearLayout>