<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FacebookUsernameActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_facebook_username_headline"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_facebook_username_details"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/et_facebook_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text" >
    </EditText>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dip"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="12sp"
        android:textStyle="normal" 
        android:onClick="toMainMenuActivity"/>

</LinearLayout>